# notion_mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt  tomllib.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  publish.yml
Docs/: Design.md  Development_Plan.md  README.md  Requirements.md  TechStack.md
Docs/Developer/: API.md  packaging.md
Docs/Developer/api/: cli.md  core.md
Docs/Developer/architecture/: overview.md
Docs/Developer/mcp_tools/: README.md  blocks.md  config.md  data_sources.md  databases.md  file_uploads.md  pages.md  raw_api.md  search.md  users.md
Docs/Developer/testing/: cli.md  core.md  live.md  mcp.md  scenarios.md  strategy.md
Docs/EN/: README.md
Docs/EN/Developer/: API.md  README.md  packaging.md
Docs/EN/Developer/api/: cli.md  core.md
Docs/EN/Developer/architecture/: overview.md
Docs/EN/Developer/mcp_tools/: README.md  auth.md  blocks.md  comments.md  config.md  custom_emojis.md  data_sources.md  pages.md  (+6 more)
Docs/EN/User/: Cli.md  Configuration.md  Guide.md  Installation.md  MCP_Clients.md  README.md  Troubleshooting.md  Uninstallation.md
Docs/JP/: README.md
Docs/JP/Developer/: API.md  README.md  packaging.md
Docs/JP/User/: Cli.md  Configuration.md  Guide.md  Installation.md  MCP_Clients.md  README.md  Troubleshooting.md  Uninstallation.md
Docs/User/: Cli.md  Guide.md  Installation.md  MCP_Clients.md  Uninstallation.md  cli.md  configuration.md  installation.md  mcp_clients.md  troubleshooting.md
Docs/User/Cli/: Auth_And_User.md  Block.md  Comments.md  Database_DataSource.md  File_Uploads.md  Legacy_Commands.md  MCP_Server.md  Overview.md  Page.md  Project_Config.md  Raw_API.md  Search_And_Custom_Emoji.md  Views.md
Docs/ZH/: README.md
Docs/ZH/Developer/: API.md  README.md  packaging.md
Docs/ZH/User/: Cli.md  Configuration.md  Guide.md  Installation.md  MCP_Clients.md  README.md  Troubleshooting.md
Docs/dev/: ADR-002-local-context-and-cli-v2.md  ADR-003-project-attach-context.md  ADR-004-cli-command-surface-consolidation.md  Feature_Completion_Plan.md  User_Usage_Model_Revision.md  V2_V3_Development_Design.md  V2_V3_Trackable_Tasks.md  progress.md  test_policy.md
Docs/skills/: CHANGELOG.md  README.md
Docs/skills/references/: normal.md
notion_mcp/: __init__.py
scripts/: build_docs_site.py
src/nilo/: README.md  __init__.py  dependencies.py  server.py
src/nilo/cli/: __init__.py  app.py  core_services.py  formatting.py
src/nilo/core/: __init__.py  audit.py  auth.py  client.py  config.py  errors.py  identifiers.py  models.py
src/nilo/mcp_server/: __init__.py  process_manager.py  runner.py  server.py
src/nilo/models/: __init__.py  config_model.py
src/nilo/routes/: __init__.py  blocks.py  databases.py
src/notion_mcp/: README.md  __init__.py  config.py  dependencies.py  server.py
src/notion_mcp/cli/: __init__.py  app.py  core_services.py  formatting.py
src/notion_mcp/core/: __init__.py  audit.py  auth.py  client.py  config.py  errors.py  identifiers.py  models.py
src/notion_mcp/mcp_server/: __init__.py  server.py
src/notion_mcp/models/: __init__.py  config_model.py
src/notion_mcp/routes/: __init__.py  blocks.py  databases.py  pages.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_server_blocks.py  test_server_databases.py  test_server_pages.py
tests/live/: __init__.py  test_live_auth_validate.py  test_live_content_consistency_e2e.py  test_live_mcp_server_http_e2e.py
tests/v2/: __init__.py
tests/v2/cli/: __init__.py  helpers.py  test_config_commands.py  test_data_source_namespace.py  test_database_container.py  test_database_shortcut_commands.py  test_dry_run.py  test_english_output_text.py  test_help_text.py  test_init.py  test_json_usage_errors.py  test_legacy_database_query_raw_api.py  test_raw_api_positioning.py  test_resource_commands.py  test_stage8_extended_resource_commands.py  test_stage8_status_capabilities.py  test_status.py
tests/v2/core/: __init__.py  test_audit.py  test_auth.py  test_client.py  test_config.py  test_database_data_source_services.py  test_database_service_container_only.py  test_errors.py  test_notion_version_policy.py  test_packaging_metadata.py  test_packaging_metadata_v2.py  test_services_and_raw_api.py  test_stage5_services_extended.py
tests/v2/fixtures/: __init__.py  fake_notion.py
tests/v2/mcp_server/: __init__.py  test_dangerous_tools.py  test_server_lifecycle.py  test_stage5_tool_coverage.py  test_tool_calls.py  test_tool_inventory.py
tests/v2/mcp_tools/: test_database_data_source_tools.py  test_legacy_database_query_raw_api.py
tests/v2/scenarios/: __init__.py  test_cli_documentation_inventory.py  test_cli_to_core_to_fake_notion.py  test_documentation_reader_boundary.py  test_existing_rest_smoke.py  test_full_local_config_flow.py  test_install_and_run.py  test_isolated_install.py  test_mcp_client_flow.py  test_mcp_to_core_to_fake_notion.py  test_page_content_edit_workflow.py  test_stage1_documentation_alignment.py  test_stage7_documentation_completeness.py  test_stage8_release_readiness.py
tests/v3/: __init__.py
tests/v3/cli/: __init__.py  test_database_attach.py  test_database_context_resolution.py  test_database_detach.py  test_database_status.py  test_page_attach.py  test_page_block_edit_attach.py  test_page_content_attach.py  test_page_context_resolution.py  test_page_detach.py  test_page_insert.py  test_page_status.py  test_page_url_inputs.py  test_project_init.py  test_project_status.py  test_public_command_surface_revision.py
tests/v3/core/: __init__.py  test_database_attachment_store.py  test_identifier_parsing.py  test_page_attachment_store.py  test_page_content_service.py  test_project_resolver.py
tests/v3/scenarios/: test_attach_database_workflow.py  test_attach_page_workflow.py  test_project_context_discovery.py
tests/v4/cli/: test_server_commands.py
tests/v4/mcp_server/: test_http_tool_output_contract.py  test_process_manager.py
(+194 files in other folders)
