[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notion-mcp"
version = "0.2.0"
description = "A local Notion MCP project with legacy FastAPI routes and a Typer CLI"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.9",
    "pydantic>=2.0",
    "notion-client>=2.0",  # Python SDK for Notion API
    "mcp>=1.27",
    "python-dotenv>=1.0",  # optional: load .env files
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notion_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "live: tests that require real Notion credentials and are skipped by default",
]

[project.scripts]
notion-mcp = "notion_mcp.cli:app"

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = "/tmp/notion_mcp_ruff_cache"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
cache_dir = "/tmp/notion_mcp_mypy_cache"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
