[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notion-mcp"
version = "0.2.0"
description = "A local Notion MCP server with Core, CLI, and MCP tool entrypoints"
authors = [ { name = "Jieqiang Zhang", email = "20318684+bluewhitep@users.noreply.github.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["mcp", "notion", "cli", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.9",
    "pydantic>=2.0",
    "notion-client>=2.0",  # Python SDK for Notion API
    "mcp>=1.27",
    "python-dotenv>=1.0",  # optional: load .env files
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notion_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
norecursedirs = ["tests/v5"]
markers = [
    "live: tests that require real Notion credentials and are skipped by default",
]

[project.scripts]
notion-mcp = "notion_mcp.cli:app"

[project.urls]
Homepage = "https://github.com/bluewhitep/notion_mcp"
Repository = "https://github.com/bluewhitep/notion_mcp"
Issues = "https://github.com/bluewhitep/notion_mcp/issues"
Documentation = "https://github.com/bluewhitep/notion_mcp/tree/main/Docs"

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = "/tmp/notion_mcp_ruff_cache"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
cache_dir = "/tmp/notion_mcp_mypy_cache"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false

[tool.git_guard]
profile = "mcp-tool-repo"

[tool.git_guard.allow_categories]
mcp_tool_info = [
    ".github/**",
    "CONTRIBUTING.md",
    "README.md",
    "SECURITY.md",
    "Docs/**",
    "pyproject.toml",
    "src/notion_mcp/**",
    "tests/**",
]
email_address = ["pyproject.toml"]
placeholder_user_path = ["**"]
placeholder_email = ["**"]
placeholder_secret = ["**"]

[tool.git_guard.warn_categories]
code_variable_secret_keyword = ["**"]
ssh_public_key = ["**"]

[tool.git_guard.allow_placeholders]
absolute_user_path = ["/home/<USER>/**", "/Users/<USER>/**", "C:\\Users\\<USER>\\**"]
email_address = ["<EMAIL>"]
local_username = ["<USER>", "<USERNAME>"]
dotenv_secret = ["<TOKEN>", "<SECRET>", "<API_KEY>", "<PASSWORD>"]
