[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notion-nilo"
version = "0.4.0"
description = "N.I.L.O. - Notion Interfaces, Locally Operated: a local Notion runtime with Core, CLI, and MCP tool entrypoints"
authors = [ { name = "Jieqiang Zhang", email = "20318684+bluewhitep@users.noreply.github.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["mcp", "notion", "cli", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.9",
    "pydantic>=2.0",
    "notion-client>=2.0",  # Python SDK for Notion API
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.sdist]
include = [
    "/CONTRIBUTING.md",
    "/Docs",
    "/LICENSE",
    "/README.md",
    "/SECURITY.md",
    "/pyproject.toml",
    "/requirements.txt",
    "/src",
    "/tests",
    "/tomllib.py",
]
exclude = [
    "/.notion_mcp",
    "/.notion_mcp/**",
    "/Docs/EN/Developer/Reference/Skills/test_copies",
    "/Docs/EN/Developer/Reference/Skills/test_copies/**",
    "/tests/v5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nilo"]

[tool.hatch.build]
exclude = [
    "/.agents",
    "/.codex",
    "/.notion_mcp",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/project.tmp",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
norecursedirs = ["tests/v5"]
markers = [
    "live: tests that require real Notion credentials and are skipped by default",
]

[project.scripts]
nilo = "nilo.cli:app"

[project.urls]
Homepage = "https://github.com/bluewhitep/notion-nilo"
Repository = "https://github.com/bluewhitep/notion-nilo"
Issues = "https://github.com/bluewhitep/notion-nilo/issues"
Documentation = "https://bluewhitep.github.io/notion-nilo/"

[tool.ruff]
line-length = 120
target-version = "py310"
cache-dir = "/tmp/nilo_ruff_cache"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
cache_dir = "/tmp/nilo_mypy_cache"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false

[tool.git_guard]
profile = "mcp-tool-repo"

[tool.git_guard.allow_categories]
mcp_tool_info = [
    ".github/**",
    "CONTRIBUTING.md",
    "README.md",
    "SECURITY.md",
    "Docs/**",
    "pyproject.toml",
    "src/nilo/**",
    "tests/**",
]
email_address = ["pyproject.toml"]
placeholder_user_path = ["**"]
placeholder_email = ["**"]
placeholder_secret = ["**"]

[tool.git_guard.warn_categories]
code_variable_secret_keyword = ["**"]
ssh_public_key = ["**"]

[tool.git_guard.allow_placeholders]
absolute_user_path = ["/home/<USER>/**", "/Users/<USER>/**", "C:\\Users\\<USER>\\**"]
email_address = ["<EMAIL>"]
local_username = ["<USER>", "<USERNAME>"]
dotenv_secret = ["<TOKEN>", "<SECRET>", "<API_KEY>", "<PASSWORD>"]
